# erhion-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
app/: CMakeLists.txt  main.cpp
app/shaders/: simple.fs  simple.vs
cmake/: CompileFlags.cmake  CompileOptions.cmake
demo/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  Window.cpp  Window.h  mesh.cpp  shader.cpp  shader.h  window.cpp  window.h
quixot/: CMakeLists.txt
quixot/core/: CMakeLists.txt  io.cpp  io.h  logging.h  pch.h  type_aliases.h
quixot/renderer/: CMakeLists.txt  mesh.cpp  mesh.h  pch.h  shader.cpp  shader.h  window.cpp  window.h
tests/: CMakeLists.txt  fake_test.cpp
utils/: CMakeLists.txt  io.h  logging.h
